--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@payloadcms/richtext-lexical": "3.69.0",
     "@payloadcms/ui": "3.69.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/nodemailer": "^7.0.10",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "lucide-react": "^0.562.0",
     "next": "15.4.10",
+    "nodemailer": "^8.0.1",
     "payload": "3.69.0",
     "payload-storage-cloudinary": "^1.1.3",
     "postcss": "^8.5.6",
